src/Untyped/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from src/Syntax/Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseQuery_ -> Query                        (0)
	%start_parseCondition_ -> Condition                (1)
	%start_parseExpr_ -> Expr                          (2)
	Query -> Delete                                    (3)
	Query -> Select                                    (4)
	Query -> Insert                                    (5)
	Delete -> delete from Name where Condition         (6)
	Delete -> delete from Name                         (7)
	Select -> select ExprList from Name where Condition   (8)
	Select -> select ExprList from Name                (9)
	Insert -> insert into Name '(' NameList ')' values '(' ExprList ')'   (10)
	NameList -> Name                                   (11)
	NameList -> NameList comma Name                    (12)
	ExprList -> Expr                                   (13)
	ExprList -> ExprList comma Expr                    (14)
	Compare -> '='                                     (15)
	Compare -> '!='                                    (16)
	Compare -> '<'                                     (17)
	Compare -> '>'                                     (18)
	Compare -> '<='                                    (19)
	Compare -> '>='                                    (20)
	Compare -> like                                    (21)
	Compare -> ilike                                   (22)
	Condition -> Name Compare Expr                     (23)
	Condition -> Condition and Condition               (24)
	Condition -> Condition or Condition                (25)
	Condition -> not Condition                         (26)
	Condition -> '(' Condition ')'                     (27)
	Name -> name                                       (28)
	Expr -> Literal                                    (29)
	Expr -> Name                                       (30)
	Expr -> param                                      (31)
	Expr -> '(' Expr ')'                               (32)
	Expr -> Expr '^' Expr                              (33)
	Expr -> Expr '*' Expr                              (34)
	Expr -> Expr '/' Expr                              (35)
	Expr -> Expr '+' Expr                              (36)
	Expr -> Expr '-' Expr                              (37)
	Expr -> Expr '=' Expr                              (38)
	Expr -> Expr '!=' Expr                             (39)
	Expr -> Expr '<' Expr                              (40)
	Expr -> Expr '>' Expr                              (41)
	Expr -> Expr '<=' Expr                             (42)
	Expr -> Expr '>=' Expr                             (43)
	Expr -> Expr like Expr                             (44)
	Expr -> Expr ilike Expr                            (45)
	Expr -> not Expr                                   (46)
	Expr -> '-' Expr                                   (47)
	Expr -> Expr Null                                  (48)
	Literal -> string                                  (49)
	Literal -> number                                  (50)
	Null -> is null                                    (51)
	Null -> isnull                                     (52)
	Null -> is not null                                (53)
	Null -> notnull                                    (54)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	delete         { LocToken _ L.Delete }
	select         { LocToken _ L.Select }
	insert         { LocToken _ L.Insert }
	from           { LocToken _ L.From }
	where          { LocToken _ L.Where }
	into           { LocToken _ L.Into }
	values         { LocToken _ L.Values }
	'('            { LocToken _ L.LParen }
	')'            { LocToken _ L.RParen }
	comma          { LocToken _ L.Comma }
	name           { LocToken _ (L.Name $$) }
	string         { LocToken _ (L.String $$) }
	number         { LocToken _ (L.Number $$) }
	param          { LocToken _ (L.Param $$) }
	'*'            { LocToken _ L.Mul }
	'/'            { LocToken _ L.Div }
	'+'            { LocToken _ L.Add }
	'-'            { LocToken _ L.Sub }
	'^'            { LocToken _ L.Exponent }
	is             { LocToken _ L.Is }
	null           { LocToken _ L.Null }
	isnull         { LocToken _ L.IsNull }
	notnull        { LocToken _ L.NotNull }
	'='            { LocToken _ L.Equals }
	'!='           { LocToken _ L.NotEquals }
	'<'            { L.LocToken _ L.LT }
	'>'            { L.LocToken _ L.GT }
	'<='           { L.LocToken _ L.LTE }
	'>='           { L.LocToken _ L.GTE }
	not            { L.LocToken _ L.Not }
	like           { L.LocToken _ L.Like }
	ilike          { L.LocToken _ L.ILike }
	and            { LocToken _ L.And }
	or             { LocToken _ L.Or }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseQuery_ rule  0
	%start_parseCondition_ rule  1
	%start_parseExpr_ rule  2
	Query           rules 3, 4, 5
	Delete          rules 6, 7
	Select          rules 8, 9
	Insert          rule  10
	NameList        rules 11, 12
	ExprList        rules 13, 14
	Compare         rules 15, 16, 17, 18, 19, 20, 21, 22
	Condition       rules 23, 24, 25, 26, 27
	Name            rule  28
	Expr            rules 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48
	Literal         rules 49, 50
	Null            rules 51, 52, 53, 54

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	delete         shift, and enter state 5
	select         shift, and enter state 23
	insert         shift, and enter state 24

	Query          goto state 20
	Delete         goto state 4
	Select         goto state 21
	Insert         goto state 22

State 1


	'('            shift, and enter state 18
	name           shift, and enter state 10
	not            shift, and enter state 19

	Condition      goto state 16
	Name           goto state 17

State 2


	'('            shift, and enter state 9
	name           shift, and enter state 10
	string         shift, and enter state 11
	number         shift, and enter state 12
	param          shift, and enter state 13
	'-'            shift, and enter state 14
	not            shift, and enter state 15

	Name           goto state 6
	Expr           goto state 7
	Literal        goto state 8

State 3


	delete         shift, and enter state 5

	Delete         goto state 4

State 4

	Query -> Delete .                                   (rule 3)

	%eof           reduce using rule 3


State 5

	Delete -> delete . from Name where Condition        (rule 6)
	Delete -> delete . from Name                        (rule 7)

	from           shift, and enter state 61


State 6

	Expr -> Name .                                      (rule 30)

	from           reduce using rule 30
	')'            reduce using rule 30
	comma          reduce using rule 30
	'*'            reduce using rule 30
	'/'            reduce using rule 30
	'+'            reduce using rule 30
	'-'            reduce using rule 30
	'^'            reduce using rule 30
	is             reduce using rule 30
	isnull         reduce using rule 30
	notnull        reduce using rule 30
	'='            reduce using rule 30
	'!='           reduce using rule 30
	'<'            reduce using rule 30
	'>'            reduce using rule 30
	'<='           reduce using rule 30
	'>='           reduce using rule 30
	like           reduce using rule 30
	ilike          reduce using rule 30
	and            reduce using rule 30
	or             reduce using rule 30
	%eof           reduce using rule 30


State 7

	%start_parseExpr_ -> Expr .                         (rule 2)
	Expr -> Expr . '^' Expr                             (rule 33)
	Expr -> Expr . '*' Expr                             (rule 34)
	Expr -> Expr . '/' Expr                             (rule 35)
	Expr -> Expr . '+' Expr                             (rule 36)
	Expr -> Expr . '-' Expr                             (rule 37)
	Expr -> Expr . '=' Expr                             (rule 38)
	Expr -> Expr . '!=' Expr                            (rule 39)
	Expr -> Expr . '<' Expr                             (rule 40)
	Expr -> Expr . '>' Expr                             (rule 41)
	Expr -> Expr . '<=' Expr                            (rule 42)
	Expr -> Expr . '>=' Expr                            (rule 43)
	Expr -> Expr . like Expr                            (rule 44)
	Expr -> Expr . ilike Expr                           (rule 45)
	Expr -> Expr . Null                                 (rule 48)

	'*'            shift, and enter state 45
	'/'            shift, and enter state 46
	'+'            shift, and enter state 47
	'-'            shift, and enter state 48
	'^'            shift, and enter state 49
	is             shift, and enter state 50
	isnull         shift, and enter state 51
	notnull        shift, and enter state 52
	'='            shift, and enter state 53
	'!='           shift, and enter state 54
	'<'            shift, and enter state 55
	'>'            shift, and enter state 56
	'<='           shift, and enter state 57
	'>='           shift, and enter state 58
	like           shift, and enter state 59
	ilike          shift, and enter state 60
	%eof           accept

	Null           goto state 44

State 8

	Expr -> Literal .                                   (rule 29)

	from           reduce using rule 29
	')'            reduce using rule 29
	comma          reduce using rule 29
	'*'            reduce using rule 29
	'/'            reduce using rule 29
	'+'            reduce using rule 29
	'-'            reduce using rule 29
	'^'            reduce using rule 29
	is             reduce using rule 29
	isnull         reduce using rule 29
	notnull        reduce using rule 29
	'='            reduce using rule 29
	'!='           reduce using rule 29
	'<'            reduce using rule 29
	'>'            reduce using rule 29
	'<='           reduce using rule 29
	'>='           reduce using rule 29
	like           reduce using rule 29
	ilike          reduce using rule 29
	and            reduce using rule 29
	or             reduce using rule 29
	%eof           reduce using rule 29


State 9

	Expr -> '(' . Expr ')'                              (rule 32)

	'('            shift, and enter state 9
	name           shift, and enter state 10
	string         shift, and enter state 11
	number         shift, and enter state 12
	param          shift, and enter state 13
	'-'            shift, and enter state 14
	not            shift, and enter state 15

	Name           goto state 6
	Expr           goto state 43
	Literal        goto state 8

State 10

	Name -> name .                                      (rule 28)

	from           reduce using rule 28
	where          reduce using rule 28
	'('            reduce using rule 28
	')'            reduce using rule 28
	comma          reduce using rule 28
	'*'            reduce using rule 28
	'/'            reduce using rule 28
	'+'            reduce using rule 28
	'-'            reduce using rule 28
	'^'            reduce using rule 28
	is             reduce using rule 28
	isnull         reduce using rule 28
	notnull        reduce using rule 28
	'='            reduce using rule 28
	'!='           reduce using rule 28
	'<'            reduce using rule 28
	'>'            reduce using rule 28
	'<='           reduce using rule 28
	'>='           reduce using rule 28
	like           reduce using rule 28
	ilike          reduce using rule 28
	and            reduce using rule 28
	or             reduce using rule 28
	%eof           reduce using rule 28


State 11

	Literal -> string .                                 (rule 49)

	from           reduce using rule 49
	')'            reduce using rule 49
	comma          reduce using rule 49
	'*'            reduce using rule 49
	'/'            reduce using rule 49
	'+'            reduce using rule 49
	'-'            reduce using rule 49
	'^'            reduce using rule 49
	is             reduce using rule 49
	isnull         reduce using rule 49
	notnull        reduce using rule 49
	'='            reduce using rule 49
	'!='           reduce using rule 49
	'<'            reduce using rule 49
	'>'            reduce using rule 49
	'<='           reduce using rule 49
	'>='           reduce using rule 49
	like           reduce using rule 49
	ilike          reduce using rule 49
	and            reduce using rule 49
	or             reduce using rule 49
	%eof           reduce using rule 49


State 12

	Literal -> number .                                 (rule 50)

	from           reduce using rule 50
	')'            reduce using rule 50
	comma          reduce using rule 50
	'*'            reduce using rule 50
	'/'            reduce using rule 50
	'+'            reduce using rule 50
	'-'            reduce using rule 50
	'^'            reduce using rule 50
	is             reduce using rule 50
	isnull         reduce using rule 50
	notnull        reduce using rule 50
	'='            reduce using rule 50
	'!='           reduce using rule 50
	'<'            reduce using rule 50
	'>'            reduce using rule 50
	'<='           reduce using rule 50
	'>='           reduce using rule 50
	like           reduce using rule 50
	ilike          reduce using rule 50
	and            reduce using rule 50
	or             reduce using rule 50
	%eof           reduce using rule 50


State 13

	Expr -> param .                                     (rule 31)

	from           reduce using rule 31
	')'            reduce using rule 31
	comma          reduce using rule 31
	'*'            reduce using rule 31
	'/'            reduce using rule 31
	'+'            reduce using rule 31
	'-'            reduce using rule 31
	'^'            reduce using rule 31
	is             reduce using rule 31
	isnull         reduce using rule 31
	notnull        reduce using rule 31
	'='            reduce using rule 31
	'!='           reduce using rule 31
	'<'            reduce using rule 31
	'>'            reduce using rule 31
	'<='           reduce using rule 31
	'>='           reduce using rule 31
	like           reduce using rule 31
	ilike          reduce using rule 31
	and            reduce using rule 31
	or             reduce using rule 31
	%eof           reduce using rule 31


State 14

	Expr -> '-' . Expr                                  (rule 47)

	'('            shift, and enter state 9
	name           shift, and enter state 10
	string         shift, and enter state 11
	number         shift, and enter state 12
	param          shift, and enter state 13
	'-'            shift, and enter state 14
	not            shift, and enter state 15

	Name           goto state 6
	Expr           goto state 42
	Literal        goto state 8

State 15

	Expr -> not . Expr                                  (rule 46)

	'('            shift, and enter state 9
	name           shift, and enter state 10
	string         shift, and enter state 11
	number         shift, and enter state 12
	param          shift, and enter state 13
	'-'            shift, and enter state 14
	not            shift, and enter state 15

	Name           goto state 6
	Expr           goto state 41
	Literal        goto state 8

State 16

	%start_parseCondition_ -> Condition .               (rule 1)
	Condition -> Condition . and Condition              (rule 24)
	Condition -> Condition . or Condition               (rule 25)

	and            shift, and enter state 39
	or             shift, and enter state 40
	%eof           accept


State 17

	Condition -> Name . Compare Expr                    (rule 23)

	'='            shift, and enter state 31
	'!='           shift, and enter state 32
	'<'            shift, and enter state 33
	'>'            shift, and enter state 34
	'<='           shift, and enter state 35
	'>='           shift, and enter state 36
	like           shift, and enter state 37
	ilike          shift, and enter state 38

	Compare        goto state 30

State 18

	Condition -> '(' . Condition ')'                    (rule 27)

	'('            shift, and enter state 18
	name           shift, and enter state 10
	not            shift, and enter state 19

	Condition      goto state 29
	Name           goto state 17

State 19

	Condition -> not . Condition                        (rule 26)

	'('            shift, and enter state 18
	name           shift, and enter state 10
	not            shift, and enter state 19

	Condition      goto state 28
	Name           goto state 17

State 20

	%start_parseQuery_ -> Query .                       (rule 0)

	%eof           accept


State 21

	Query -> Select .                                   (rule 4)

	%eof           reduce using rule 4


State 22

	Query -> Insert .                                   (rule 5)

	%eof           reduce using rule 5


State 23

	Select -> select . ExprList from Name where Condition    (rule 8)
	Select -> select . ExprList from Name               (rule 9)

	'('            shift, and enter state 9
	name           shift, and enter state 10
	string         shift, and enter state 11
	number         shift, and enter state 12
	param          shift, and enter state 13
	'-'            shift, and enter state 14
	not            shift, and enter state 15

	ExprList       goto state 26
	Name           goto state 6
	Expr           goto state 27
	Literal        goto state 8

State 24

	Insert -> insert . into Name '(' NameList ')' values '(' ExprList ')'    (rule 10)

	into           shift, and enter state 25


State 25

	Insert -> insert into . Name '(' NameList ')' values '(' ExprList ')'    (rule 10)

	name           shift, and enter state 10

	Name           goto state 85

State 26

	Select -> select ExprList . from Name where Condition    (rule 8)
	Select -> select ExprList . from Name               (rule 9)
	ExprList -> ExprList . comma Expr                   (rule 14)

	from           shift, and enter state 83
	comma          shift, and enter state 84


State 27

	ExprList -> Expr .                                  (rule 13)
	Expr -> Expr . '^' Expr                             (rule 33)
	Expr -> Expr . '*' Expr                             (rule 34)
	Expr -> Expr . '/' Expr                             (rule 35)
	Expr -> Expr . '+' Expr                             (rule 36)
	Expr -> Expr . '-' Expr                             (rule 37)
	Expr -> Expr . '=' Expr                             (rule 38)
	Expr -> Expr . '!=' Expr                            (rule 39)
	Expr -> Expr . '<' Expr                             (rule 40)
	Expr -> Expr . '>' Expr                             (rule 41)
	Expr -> Expr . '<=' Expr                            (rule 42)
	Expr -> Expr . '>=' Expr                            (rule 43)
	Expr -> Expr . like Expr                            (rule 44)
	Expr -> Expr . ilike Expr                           (rule 45)
	Expr -> Expr . Null                                 (rule 48)

	from           reduce using rule 13
	')'            reduce using rule 13
	comma          reduce using rule 13
	'*'            shift, and enter state 45
	'/'            shift, and enter state 46
	'+'            shift, and enter state 47
	'-'            shift, and enter state 48
	'^'            shift, and enter state 49
	is             shift, and enter state 50
	isnull         shift, and enter state 51
	notnull        shift, and enter state 52
	'='            shift, and enter state 53
	'!='           shift, and enter state 54
	'<'            shift, and enter state 55
	'>'            shift, and enter state 56
	'<='           shift, and enter state 57
	'>='           shift, and enter state 58
	like           shift, and enter state 59
	ilike          shift, and enter state 60

	Null           goto state 44

State 28

	Condition -> Condition . and Condition              (rule 24)
	Condition -> Condition . or Condition               (rule 25)
	Condition -> not Condition .                        (rule 26)

	')'            reduce using rule 26
	and            reduce using rule 26
	or             reduce using rule 26
	%eof           reduce using rule 26


State 29

	Condition -> Condition . and Condition              (rule 24)
	Condition -> Condition . or Condition               (rule 25)
	Condition -> '(' Condition . ')'                    (rule 27)

	')'            shift, and enter state 82
	and            shift, and enter state 39
	or             shift, and enter state 40


State 30

	Condition -> Name Compare . Expr                    (rule 23)

	'('            shift, and enter state 9
	name           shift, and enter state 10
	string         shift, and enter state 11
	number         shift, and enter state 12
	param          shift, and enter state 13
	'-'            shift, and enter state 14
	not            shift, and enter state 15

	Name           goto state 6
	Expr           goto state 81
	Literal        goto state 8

State 31

	Compare -> '=' .                                    (rule 15)

	'('            reduce using rule 15
	name           reduce using rule 15
	string         reduce using rule 15
	number         reduce using rule 15
	param          reduce using rule 15
	'-'            reduce using rule 15
	not            reduce using rule 15


State 32

	Compare -> '!=' .                                   (rule 16)

	'('            reduce using rule 16
	name           reduce using rule 16
	string         reduce using rule 16
	number         reduce using rule 16
	param          reduce using rule 16
	'-'            reduce using rule 16
	not            reduce using rule 16


State 33

	Compare -> '<' .                                    (rule 17)

	'('            reduce using rule 17
	name           reduce using rule 17
	string         reduce using rule 17
	number         reduce using rule 17
	param          reduce using rule 17
	'-'            reduce using rule 17
	not            reduce using rule 17


State 34

	Compare -> '>' .                                    (rule 18)

	'('            reduce using rule 18
	name           reduce using rule 18
	string         reduce using rule 18
	number         reduce using rule 18
	param          reduce using rule 18
	'-'            reduce using rule 18
	not            reduce using rule 18


State 35

	Compare -> '<=' .                                   (rule 19)

	'('            reduce using rule 19
	name           reduce using rule 19
	string         reduce using rule 19
	number         reduce using rule 19
	param          reduce using rule 19
	'-'            reduce using rule 19
	not            reduce using rule 19


State 36

	Compare -> '>=' .                                   (rule 20)

	'('            reduce using rule 20
	name           reduce using rule 20
	string         reduce using rule 20
	number         reduce using rule 20
	param          reduce using rule 20
	'-'            reduce using rule 20
	not            reduce using rule 20


State 37

	Compare -> like .                                   (rule 21)

	'('            reduce using rule 21
	name           reduce using rule 21
	string         reduce using rule 21
	number         reduce using rule 21
	param          reduce using rule 21
	'-'            reduce using rule 21
	not            reduce using rule 21


State 38

	Compare -> ilike .                                  (rule 22)

	'('            reduce using rule 22
	name           reduce using rule 22
	string         reduce using rule 22
	number         reduce using rule 22
	param          reduce using rule 22
	'-'            reduce using rule 22
	not            reduce using rule 22


State 39

	Condition -> Condition and . Condition              (rule 24)

	'('            shift, and enter state 18
	name           shift, and enter state 10
	not            shift, and enter state 19

	Condition      goto state 80
	Name           goto state 17

State 40

	Condition -> Condition or . Condition               (rule 25)

	'('            shift, and enter state 18
	name           shift, and enter state 10
	not            shift, and enter state 19

	Condition      goto state 79
	Name           goto state 17

State 41

	Expr -> Expr . '^' Expr                             (rule 33)
	Expr -> Expr . '*' Expr                             (rule 34)
	Expr -> Expr . '/' Expr                             (rule 35)
	Expr -> Expr . '+' Expr                             (rule 36)
	Expr -> Expr . '-' Expr                             (rule 37)
	Expr -> Expr . '=' Expr                             (rule 38)
	Expr -> Expr . '!=' Expr                            (rule 39)
	Expr -> Expr . '<' Expr                             (rule 40)
	Expr -> Expr . '>' Expr                             (rule 41)
	Expr -> Expr . '<=' Expr                            (rule 42)
	Expr -> Expr . '>=' Expr                            (rule 43)
	Expr -> Expr . like Expr                            (rule 44)
	Expr -> Expr . ilike Expr                           (rule 45)
	Expr -> not Expr .                                  (rule 46)
	Expr -> Expr . Null                                 (rule 48)

	from           reduce using rule 46
	')'            reduce using rule 46
	comma          reduce using rule 46
	'*'            shift, and enter state 45
	'/'            shift, and enter state 46
	'+'            shift, and enter state 47
	'-'            shift, and enter state 48
	'^'            shift, and enter state 49
	is             shift, and enter state 50
	isnull         shift, and enter state 51
	notnull        shift, and enter state 52
	'='            shift, and enter state 53
	'!='           shift, and enter state 54
	'<'            shift, and enter state 55
	'>'            shift, and enter state 56
	'<='           shift, and enter state 57
	'>='           shift, and enter state 58
	like           shift, and enter state 59
	ilike          shift, and enter state 60
	and            reduce using rule 46
	or             reduce using rule 46
	%eof           reduce using rule 46

	Null           goto state 44

State 42

	Expr -> Expr . '^' Expr                             (rule 33)
	Expr -> Expr . '*' Expr                             (rule 34)
	Expr -> Expr . '/' Expr                             (rule 35)
	Expr -> Expr . '+' Expr                             (rule 36)
	Expr -> Expr . '-' Expr                             (rule 37)
	Expr -> Expr . '=' Expr                             (rule 38)
	Expr -> Expr . '!=' Expr                            (rule 39)
	Expr -> Expr . '<' Expr                             (rule 40)
	Expr -> Expr . '>' Expr                             (rule 41)
	Expr -> Expr . '<=' Expr                            (rule 42)
	Expr -> Expr . '>=' Expr                            (rule 43)
	Expr -> Expr . like Expr                            (rule 44)
	Expr -> Expr . ilike Expr                           (rule 45)
	Expr -> '-' Expr .                                  (rule 47)
	Expr -> Expr . Null                                 (rule 48)

	from           reduce using rule 47
	')'            reduce using rule 47
	comma          reduce using rule 47
	'*'            shift, and enter state 45
	'/'            shift, and enter state 46
	'+'            reduce using rule 47
	'-'            reduce using rule 47
	'^'            shift, and enter state 49
	is             reduce using rule 47
	isnull         reduce using rule 47
	notnull        reduce using rule 47
	'='            reduce using rule 47
	'!='           reduce using rule 47
	'<'            reduce using rule 47
	'>'            reduce using rule 47
	'<='           reduce using rule 47
	'>='           reduce using rule 47
	like           reduce using rule 47
	ilike          reduce using rule 47
	and            reduce using rule 47
	or             reduce using rule 47
	%eof           reduce using rule 47

	Null           goto state 44

State 43

	Expr -> '(' Expr . ')'                              (rule 32)
	Expr -> Expr . '^' Expr                             (rule 33)
	Expr -> Expr . '*' Expr                             (rule 34)
	Expr -> Expr . '/' Expr                             (rule 35)
	Expr -> Expr . '+' Expr                             (rule 36)
	Expr -> Expr . '-' Expr                             (rule 37)
	Expr -> Expr . '=' Expr                             (rule 38)
	Expr -> Expr . '!=' Expr                            (rule 39)
	Expr -> Expr . '<' Expr                             (rule 40)
	Expr -> Expr . '>' Expr                             (rule 41)
	Expr -> Expr . '<=' Expr                            (rule 42)
	Expr -> Expr . '>=' Expr                            (rule 43)
	Expr -> Expr . like Expr                            (rule 44)
	Expr -> Expr . ilike Expr                           (rule 45)
	Expr -> Expr . Null                                 (rule 48)

	')'            shift, and enter state 78
	'*'            shift, and enter state 45
	'/'            shift, and enter state 46
	'+'            shift, and enter state 47
	'-'            shift, and enter state 48
	'^'            shift, and enter state 49
	is             shift, and enter state 50
	isnull         shift, and enter state 51
	notnull        shift, and enter state 52
	'='            shift, and enter state 53
	'!='           shift, and enter state 54
	'<'            shift, and enter state 55
	'>'            shift, and enter state 56
	'<='           shift, and enter state 57
	'>='           shift, and enter state 58
	like           shift, and enter state 59
	ilike          shift, and enter state 60

	Null           goto state 44

State 44

	Expr -> Expr Null .                                 (rule 48)

	from           reduce using rule 48
	')'            reduce using rule 48
	comma          reduce using rule 48
	'*'            reduce using rule 48
	'/'            reduce using rule 48
	'+'            reduce using rule 48
	'-'            reduce using rule 48
	'^'            reduce using rule 48
	is             reduce using rule 48
	isnull         reduce using rule 48
	notnull        reduce using rule 48
	'='            reduce using rule 48
	'!='           reduce using rule 48
	'<'            reduce using rule 48
	'>'            reduce using rule 48
	'<='           reduce using rule 48
	'>='           reduce using rule 48
	like           reduce using rule 48
	ilike          reduce using rule 48
	and            reduce using rule 48
	or             reduce using rule 48
	%eof           reduce using rule 48


State 45

	Expr -> Expr '*' . Expr                             (rule 34)

	'('            shift, and enter state 9
	name           shift, and enter state 10
	string         shift, and enter state 11
	number         shift, and enter state 12
	param          shift, and enter state 13
	'-'            shift, and enter state 14
	not            shift, and enter state 15

	Name           goto state 6
	Expr           goto state 77
	Literal        goto state 8

State 46

	Expr -> Expr '/' . Expr                             (rule 35)

	'('            shift, and enter state 9
	name           shift, and enter state 10
	string         shift, and enter state 11
	number         shift, and enter state 12
	param          shift, and enter state 13
	'-'            shift, and enter state 14
	not            shift, and enter state 15

	Name           goto state 6
	Expr           goto state 76
	Literal        goto state 8

State 47

	Expr -> Expr '+' . Expr                             (rule 36)

	'('            shift, and enter state 9
	name           shift, and enter state 10
	string         shift, and enter state 11
	number         shift, and enter state 12
	param          shift, and enter state 13
	'-'            shift, and enter state 14
	not            shift, and enter state 15

	Name           goto state 6
	Expr           goto state 75
	Literal        goto state 8

State 48

	Expr -> Expr '-' . Expr                             (rule 37)

	'('            shift, and enter state 9
	name           shift, and enter state 10
	string         shift, and enter state 11
	number         shift, and enter state 12
	param          shift, and enter state 13
	'-'            shift, and enter state 14
	not            shift, and enter state 15

	Name           goto state 6
	Expr           goto state 74
	Literal        goto state 8

State 49

	Expr -> Expr '^' . Expr                             (rule 33)

	'('            shift, and enter state 9
	name           shift, and enter state 10
	string         shift, and enter state 11
	number         shift, and enter state 12
	param          shift, and enter state 13
	'-'            shift, and enter state 14
	not            shift, and enter state 15

	Name           goto state 6
	Expr           goto state 73
	Literal        goto state 8

State 50

	Null -> is . null                                   (rule 51)
	Null -> is . not null                               (rule 53)

	null           shift, and enter state 71
	not            shift, and enter state 72


State 51

	Null -> isnull .                                    (rule 52)

	from           reduce using rule 52
	')'            reduce using rule 52
	comma          reduce using rule 52
	'*'            reduce using rule 52
	'/'            reduce using rule 52
	'+'            reduce using rule 52
	'-'            reduce using rule 52
	'^'            reduce using rule 52
	is             reduce using rule 52
	isnull         reduce using rule 52
	notnull        reduce using rule 52
	'='            reduce using rule 52
	'!='           reduce using rule 52
	'<'            reduce using rule 52
	'>'            reduce using rule 52
	'<='           reduce using rule 52
	'>='           reduce using rule 52
	like           reduce using rule 52
	ilike          reduce using rule 52
	and            reduce using rule 52
	or             reduce using rule 52
	%eof           reduce using rule 52


State 52

	Null -> notnull .                                   (rule 54)
